# MCP_SVM_Tool

./: .gitignore  ASYNC_TRAINING_USAGE.md  FIXED_ASYNC_EXAMPLE.md  MULTI_USER_IMPLEMENTATION_SUMMARY.md  main.py  pyproject.toml  quick_test_async.py  run_mcp_server_fastapi.py  single_port_server.py
.taskmaster/: state.json
cv_results/: 0129887f-24ba-45c4-9cd0-f8c57b572cfa_preprocessed_data.csv  40898dc3-254e-4dfa-a779-b72a27d12f1e_cv_predictions_processed.csv  6b937211-5454-4a4f-b5cc-79514cb3cf48_cv_predictions_original.csv  9cc2de6c-74ac-4448-b8a2-d3ebc3d64a36_cv_predictions_original.csv  b412fe07-c613-4158-b093-bd5882820543_cv_predictions_original.csv  d4842096-56e9-4ece-a1b6-ce57d62f23fd_cv_predictions_processed.csv  d8203555-45a3-485d-a5ed-67345228de9d_preprocessed_data.csv  test_svm_classification_cv_predictions_original.csv  test_svm_classification_cv_predictions_processed.csv  test_svm_classification_original_data.csv  test_svm_classification_preprocessed_data.csv  test_svm_regression_cv_predictions_original.csv  test_svm_regression_cv_predictions_processed.csv  test_svm_regression_original_data.csv  test_svm_regression_preprocessed_data.csv  test_svm_wrapper_cv_predictions_original.csv  test_svm_wrapper_cv_predictions_processed.csv  test_svm_wrapper_original_data.csv  test_svm_wrapper_preprocessed_data.csv
queue/: 025643ff-1acf-432f-bbf3-6ddc62d5c072.json  10145665-3cad-4367-b6b6-03eea960fe49.json  10f5f9e7-c7e8-4e44-beff-677164d64a55.json  231f26ca-96e4-4ddf-b117-e82ad9d52288.json  2d226084-55a9-44db-85ef-308140b0ef81.json  38b738ec-e3cb-4a18-9437-649fe8ddc44c.json  46ff616e-b5a6-44f2-bdeb-ff1e02e3b487.json  4fea8b10-8da4-4d63-9752-fea162fab628.json  (+20 more)
(+30 files in other folders)
