[project]
name = "mcp-svm-tool"
version = "0.1.0"
description = "MCP Support Vector Machine Tool - Train, evaluate, and serve SVM models with comprehensive feature importance analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML libraries
    "scikit-learn>=1.2",
    "optuna>=3.0",
    # TODO: Add SHAP when Python 3.12 compatibility is resolved
    # "shap>=0.46.0",
    # Data processing
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    # MCP and server dependencies
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    # Utilities
    "joblib>=1.2.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    # Testing and development
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "chardet>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--cov=mcp_svm_tool", "--cov-report=html", "--cov-report=term-missing"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
